--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -66,6 +66,8 @@
         "numbers": "cpp",
         "span": "cpp",
         "text_encoding": "cpp",
-        "variant": "cpp"
+        "variant": "cpp",
+        "list": "cpp",
+        "xhash": "cpp"
     }
 }
